--- a/public/css/css.css
+++ b/public/css/css.css
@@ -406,8 +406,31 @@ a:active{color: #666; border:none;text-decoration:none; outline:none;}
 .w730{width: 730px; margin: 0 auto; font-size: 14px; line-height:1.5; color: #666;}
 .about_bg{
     background: url(../images/about_bg.png) repeat-x left; height: 300px; width: 100%; margin-top:30px;
-    text-align: center;
+    text-align: center; color: #666;
 }
 .about_bg ul li{
-    display: inline-block; margin:0 10px;
+    display: inline-block; margin:75px 70px 0 70px; background: white; font-size: 16px; box-sizing: border-box;
+    width: 150px; height: 150px; border-radius: 50%; padding-top:35px;
+    -moz-box-sizing: border-box; -webkit-box-sizing: border-box;
+}
+.about_bg ul li p{
+    font-size: 24px;
+}
+.about_contact{
+    font-size: 14px; margin:30px 0;
+}
+.about_contact ul{
+    width: 280px; display: inline-block;
+}
+.about_contact ul li{
+    position: relative; line-height: 1.8;
+}
+.about_contact ul li label{
+   color: #999; position: absolute; text-align: right; width: 70px;
+}
+.about_contact ul li span{
+    padding-left: 80px; display: block;
+}
+.twm{
+    display: inline-block;vertical-align:top; margin:0 80px;
 }
