关于我们取动态内容。公司页面内容取接口数据

--- a/public/css/css.css
+++ b/public/css/css.css
@@ -609,7 +609,10 @@ a:active{color: #666; border:none;text-decoration:none; outline:none;}
     color: #666;
 }
 
-
+.w730 p{
+    padding: 5px;
+    text-indent:30px;
+}
 
 
 
