首页显示8条设计师数据

--- a/public/css/keyframes.css
+++ b/public/css/keyframes.css
@@ -39,7 +39,7 @@
 }
 .design_intro li img{ border-radius: 50%; display: block;}
 i.design_intro_pic{
-     width: 150px; height: 150px;  display:block; box-sizing: border-box;
+     width: 150px; height: 150px;  display:block; box-sizing: border-box;margin:0 auto;
 }
 .design_intro li a:hover .design_intro_pic {
     width: 150px;
